tests/snapshots/codegen_snapshot_tests__rfc041_emit_rust_path_type.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
pub use std::collections::HashMap;
pub use std::string::String;
fn empty_name_index() -> std::collections::HashMap<String, i64> {
    return HashMap::new();
}
