tests/snapshots/codegen_snapshot_tests__rfc041_std_rust_capability_bounds.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[allow(dead_code)]
fn run<T: Send + Sync>(_: T) {
    ();
}
#[allow(dead_code)]
fn run_static<T: Send + 'static>(_: T) {
    ();
}
#[allow(dead_code)]
fn run_fn<F: Fn<i64>>(_: F) {
    ();
}
#[allow(dead_code)]
fn run_fn_mut<F: FnMut<i64> + Send>(_: F) {
    ();
}
#[allow(dead_code)]
fn run_fn_once<F: FnOnce<i64> + 'static>(_: F) {
    ();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    ();
}
