tests/snapshots/codegen_snapshot_tests__rfc043_imported_trait_associated_type.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use ::demo::Assoc;
#[derive(Debug, Clone, Copy)]
struct Boxed(pub i64);
impl incan_std_core::reflection::HasTypeClassName for Boxed {
    fn __class_name__() -> &'static str {
        "Boxed"
    }
}
impl Assoc for Boxed {
    type Item = i64;
}
pub fn keep_boxed(value: Boxed) -> Boxed {
    return value;
}
