tests/snapshots/codegen_snapshot_tests__rfc043_newtype_trait_targets.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub trait ToInt {
    fn convert(&self) -> i64;
}
pub trait ToStr {
    fn convert(&self) -> String;
}
#[derive(Debug, Clone, Copy)]
struct Value(pub i64);
impl incan_std_core::reflection::HasTypeClassName for Value {
    fn __class_name__() -> &'static str {
        "Value"
    }
}
impl ToInt for Value {
    fn convert(&self) -> i64 {
        return 1;
    }
}
impl Value {
    #[inline(never)]
    pub fn convert(&self) -> i64 {
        <Self as ToInt>::convert(self)
    }
}
impl ToStr for Value {
    fn convert(&self) -> String {
        return "value".to_string();
    }
}
impl Value {
    #[inline(never)]
    pub fn convert(&self) -> String {
        <Self as ToStr>::convert(self)
    }
}
pub fn as_int<T: ToInt>(value: T) -> i64 {
    return value.convert();
}
pub fn as_str<T: ToStr>(value: T) -> String {
    return value.convert();
}
pub fn keep_value(value: Value) -> Value {
    return value;
}
